# 2019-csmi

./: .gitignore  .travis.yml  CMakeLists.txt  LZ.adoc  README.adoc  aj.adoc  classe.cpp  fib_and_square.cpp  hello.cpp  mb.adoc  mr.adoc  toto.cpp
doc/: PG.adoc  cp.adoc  mb.adoc
src/: classe.cpp  classe.hpp  hello.cpp
tests/: CMakeLists.txt  test_py  test_toto.cpp
